profile name overflow fixed

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,7 +3,7 @@
   display: grid;
   row-gap: 13px;
   color: white;
-  height: 39px;
+  height: 59px;
   margin-top: auto;
   margin-bottom: auto;
 }
