--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,19 +1,18 @@
 .profile__name {
   margin: 0;
   width: 415px;
-  height: 50px;
+  height: 90px;
   font-family: inter-medium;
   font-weight: 500;
   font-size: 42px;
   line-height: 94%;
-  white-space: nowrap;
-  overflow: auto;
+  overflow: hidden;
 }
 @media screen and (max-width: 1279px) and (min-width: 880px) {
   .profile__name {
     position:relative;
     width: 245px;
-    height: 39px;
+    height: 68px;
     padding-bottom: 0px;
     font-size: 36px;
   }
